# genderize

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
Genderize/: Genderize.py
examples/: basic_usage.py
latam_genderize/: __init__.py  genderize.py
latam_genderize/models/: README.md
tests/: test_genderize.py
